# This file is part of intel-seapi. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/intel-seapi/master/COPYRIGHT. No part of intel-seapi, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2018 The developers of intel-seapi. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/intel-seapi/master/COPYRIGHT.


[package]
name = "intel-seapi"
description = "Mid-level wrapper for Intel Single Event API (SEAPI) and ittnotify, as used by Intel VTune"
keywords = ["intel", "itt", "vtune", "SEAPI", "ittnotify"]
categories = ["development-tools::profiling", "hardware-support"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/intel-seapi"
repository = "https://github.com/lemonrock/intel-seapi.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = true
version = "0.1.3"

[dependencies]
either = "^1.5"
intel-seapi-sys = { version = "^0.1.1", path = "../intel-seapi-sys" }
